update: fixing align issues in h1

--- a/source/secondPage.scss
+++ b/source/secondPage.scss
@@ -6,6 +6,7 @@
     h1 {
         margin: 30px 0;
         color: #99DAFF;
+        text-align: center;
     }
 
     p {
